--- a/style.css
+++ b/style.css
@@ -1,29 +1,49 @@
 body {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(42, 42, 42);
   width: 1000px;
   margin: 10px auto;
   text-align: center;
   padding: 10px;
   user-select: none;
+  background-size: 100% auto;
+  color: rgb(195, 195, 195);
+}
+
+a {
+  color: rgb(47, 121, 234);
 }
 
 h2 {
-  font-size: 30px;
-  text-align: center;
-  height: 75px;
+  height: auto;
+  margin-top: 0px;
+  flex-grow: 3;
 }
 
-span{
-  font-size: 75px;
-  margin-top: 20px;
+button {
+  background-color: rgb(29, 14, 78);
+  border: 0px;
+  width: 280px;
+  height: 50px;
+  margin: 5px;
+  color: rgb(195, 195, 195);
+  font-size: 24px;
+}
+
+.cell {
+  font-size: 150px;
+}
+
+.text {
+  font-size: 24px;
+  text-align: center;
+  color: rgb(195, 195, 195);
 }
 
 div[id^="row-"] div {
   width: 200px;
   height: 200px;
-  border: 1px solid red;
+  border: 2px solid rgb(42, 42, 42);
   float: left;
-
 }
 
 div[id^="row-"] div:last-child {
@@ -34,23 +54,26 @@ div[id^="row-"] div:first-child {
   border-left: none;
 }
 
-div[id="row-1"] div{
+div[id="row-1"] div {
   border-top: none;
 }
 
-div[id="row-3"] div{
-    border-bottom: none;
+div[id="row-3"] div {
+  border-bottom: none;
 }
 
 div[id^="row-"] {
   clear: float;
-  width: 608px;
+  width: 626px;
   box-sizing: border-box;
   overflow: hidden;
 }
 
 div.board {
-  width: 608px;
+  width: 622px;
   overflow: hidden;
   margin: 0 auto;
+  border-radius: 10px;
+  background: rgb(195, 195, 195);
+  color: rgb(42, 42, 42);
 }
